--- a/library.properties
+++ b/library.properties
@@ -1,11 +1,11 @@
 # Fill in information about your library then remove # from the start of lines
 # https://docs.particle.io/guide/tools-and-features/libraries/#library-properties-fields
 name=EEPROM_Class
-version=0.0.1
+version=0.0.3
 author=Randy E. Rainwater
-# license=insert your choice of license here
+license=MIT
 # sentence=one sentence description of this library
-# paragraph=a longer description of this library, always prepended with sentence when shown
-# url=the URL of the project, like https://github.com/mygithub_user/my_repo
-# repository=git repository for the project, like https://github.com/mygithub_user/my_repo.git
-# architectures=a list of supported boards if this library is hardware dependent, like particle-photon,particle-electron
+paragraph=Class for managing configuration data stored in EEPROM for non-volatility.
+url=https://github.com/Randyrtx/EEPROM_Class
+repository=https://github.com/Randyrtx/EEPROM_Class.git
+architectures=*
